[package]
name = "msmc"
license = "GPL-3.0"
description = "A Microsoft and Minecraft authentication library."
repository = "https://github.com/DuckyHQ0/hqlauncher-rs/tree/main/msmc"
keywords = ["minecraft", "microsoft", "auth"]
categories = ["authentication"]
version = "0.1.1"
edition = "2021"

[dependencies]
tao = "0.28.1"
wry = "0.41.0"
